--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </a-assets>
           <a-entity gltf-model="#cinema" modify-materials scale="0.06 0.05 0.05"  rotation="0 90 0" position="0.21 1.2 -1"></a-entity>-->
         <a-plane scale ="2.4 1.35 1.5" iframe-display="url: https://solarity-frontend.vercel.app/solaritytest; density: 500" position="0 2 -2.4" color="black" ></a-plane>
-        <a-plane scale ="2.4 1.35 1.5" iframe-display="url: https://www.youtube.com/embed/7HNyhOiVK1A: density: 500" position="2.6 2 -2.4"  color="black" ></a-plane>
+        <a-plane scale ="2.4 1.35 1.5" iframe-display="url: https://www.instagram.com/?hl=en: density: 500" position="2.6 2 -2.4"  color="black" ></a-plane>
         <a-plane scale ="2.4 1.35 1.5" iframe-display="url: https://www.youtube.com/embed/QMNHnIkpNVk; density: 500" position="-2.6 2 -2.4"  color="black" ></a-plane>
         <a-sky color="#000000"></a-sky>
     </a-scene>
